package logic.able;

import logic.character.BaseCharacter;

public interface Atk {
    void attack(BaseCharacter target) ;
}
