package logic.able;

import logic.monsters.Monster;

public interface buffFriend {
    void buff(Monster target);
}
