package logic.able;

import logic.character.BaseCharacter;

public interface magicAtk {
    void magicAttack(BaseCharacter target) ;
}
