package logic.able;

import logic.character.BaseCharacter;

public interface spAtk {
    void specialAttack(BaseCharacter target) ;
}
