package logic.usage;

public interface AttBuffable {

    int getAttBuff();
    int getBuffTurn();

}
