package logic.usage;

public interface Healable {

    int getRecoverPoint();

}
